--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.13.1",
     "karma": "^1.4.0",
     "mocha": "^3.2.0",
     "spdx-license-list": "^2.1.0"
