--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,8 @@ engines:
       - javascript
   eslint:
     enabled: true
+    no-process-exit:
+      enabled: false
   fixme:
     enabled: true
 ratings:
